# campaign-cannon-2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  alembic.ini  config.toml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
docs/: PRD_CONTEXT.md
scripts/: backup.py  seed.py
src/: config.py  exceptions.py
src/adapters/: base.py  reddit_adapter.py  twitter_adapter.py
src/api/: app.py  deps.py
src/api/routes/: campaigns.py  dashboard.py  import_export.py  posts.py  system.py
src/campaign_cannon/adapters/: __init__.py  base.py  linkedin.py  reddit.py  registry.py  twitter.py
src/campaign_cannon/api/: __init__.py  app.py  errors.py  routes.py  schemas.py
src/campaign_cannon/config/: __init__.py  credentials.py  settings.py
src/campaign_cannon/dashboard/: app.py
src/campaign_cannon/db/: __init__.py  connection.py  models.py
src/campaign_cannon/db/migrations/: env.py
src/campaign_cannon/db/migrations/versions/: 001_initial_schema.py
src/campaign_cannon/engine/: __init__.py  dedup.py  publisher.py  rate_limiter.py  recovery.py  retry.py  scheduler.py  state_machine.py
src/campaign_cannon/import_/: __init__.py  json_import.py  markdown_import.py  validator.py
src/campaign_cannon/mcp/: __init__.py  server.py  tools.py
src/campaign_cannon/media/: __init__.py  pipeline.py  validators.py
src/db/: database.py  models.py  unit_of_work.py
src/mcp_server/: __main__.py  server.py
src/scheduler/: scheduler.py
src/schemas/: campaign.py  dashboard.py  import_export.py  post.py
src/services/: asset_service.py  campaign_service.py  dashboard_service.py  execution_service.py  import_service.py  post_service.py  rate_limit_service.py  schedule_service.py
src/worker/: post_executor.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: dashboard.html
tests/: conftest.py  test_api_integration.py  test_campaign_service.py  test_execution_service.py  test_post_service.py  test_rate_limit_service.py  test_state_machines.py
tests/integration/: test_api_lifecycle.py  test_crash_recovery.py  test_publish_flow.py
tests/unit/: test_dedup.py  test_import_validator.py  test_media_validators.py  test_rate_limiter.py  test_state_machine.py
