[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "campaign-cannon"
version = "3.1.0"
description = "Bulletproof social media automation engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ryan Brenny"}]

dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "fastapi>=0.109,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "apscheduler>=3.10,<4.0",
    "httpx>=0.27,<1.0",
    "tweepy>=4.14,<5.0",
    "praw>=7.7,<8.0",
    "cryptography>=42.0,<43.0",
    "tomli>=2.0,<3.0",
    "rich>=13.7,<14.0",
    "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<6.0",
    "factory-boy>=3.3,<4.0",
    "respx>=0.21,<1.0",
    "ruff>=0.2,<1.0",
]

[project.scripts]
campaign-cannon = "campaign_cannon.api.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
